# goodreads-sync

./: LICENSE  README.md  pyproject.toml  state.json
goodreads_sync/: __init__.py  config.py  functions.py  main.py  test.py
